--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.css
@@ -52,7 +52,7 @@ body {
     background-color: #f7f2f2;
     height: 25px;
     width: 100%; /* Esto asegura que la barra abarque todo el ancho */
-}
+}   
 
 .modal-header {
     background-color: #007bff;
@@ -60,34 +60,49 @@ body {
     padding: 10px;
 }
 
-.modal-body {
-    padding: 20px;
-}
-
 .form-group {
-    margin-bottom: 20px;
+    display: flex;
+    align-items: center; /* Alinear verticalmente los elementos */
+    margin-bottom: 15px;    
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
+.label {
+    margin-right: 80px; /* Agregar margen a la derecha del texto */
 }
 
+/* Simplificación de los estilos para las cajas de texto */
 input[type="text"] {
-    width: 30%;
+    display: block;
+    display: flex;
+    width: 90%; /* Ancho del 100% para que las cajas de texto ocupen todo el ancho disponible */
     padding: 8px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;
+    box-sizing: border-box;    
+    flex-direction: column;
+    height:30px;
 }
 
+.caja1{
+    padding: 2%;
+    padding-right: 8%;
+}
+
+.modal-body{
+    display: flex;
+    padding: 25px;
+    flex-direction: row;
+    justify-content: space-between;
+}
 /* Puedes agregar más estilos según necesites */
 .modal {
-    display: none; /* Por defecto, la ventana modal está oculta */
-    position: fixed;
+    padding-top: 5%;
+    font-family: serif;
+    position: absolute;
     z-index: 1;
     left: 0;
-    top: 0;
+    top: 0%;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -95,12 +110,13 @@ input[type="text"] {
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
+    background-color: #e6e0e0;
+    margin: 1% auto;
+    padding-bottom: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 600px; /* Ancho máximo de la ventana modal */
+    max-width: 900px;
+    
 }
 
 .close {
@@ -115,4 +131,19 @@ input[type="text"] {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+
+.btn-default {
+    width: 20%; /* Ancho de cada botón */
+    height: 40px; /* Altura del botón */
+    background-color: rgb(49, 48, 54); /* Fondo negro */
+    color: white; /* Texto blanco */
+    border: none; /* Sin borde */
+    border-radius: 5px; /* Bordes redondeados */
+    cursor: pointer; /* Cambiar el cursor al pasar sobre el botón */
+    font-size: 16px; /* Tamaño de la fuente */
+    margin: 0 120px; 
+    justify-content: space-between 1%;
 }
