Ajustes_registro_Caja

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -30,9 +30,9 @@
             <!-- Contenido principal -->
             <h3>Registro de caja</h3>
             <div class="horizontal-bar">
-                <img src="./images/agregar.png" alt="agregar" onclick="openModal()">
-                <img src="./images/Eliminar.png" alt="Eliminar">
-                <img src="./images/codigoBarras.png" alt="lector">
+                <img src="images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
+                <img src="images/Eliminar.png" alt="Eliminar" class="icon">
+                <button type="button" class="lector">Lectura codigo de barras</button>
             </div>
         </div>
 
