--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
@@ -9,22 +9,40 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
+            <div class="sidebar-header">
+                <div class="logo">
+                    <img src="images/logo.png" alt="Logo">
+                </div>
+                <br>
+                
+                <div class="user-icon">
+                    <img src="images/usuario-de-perfil.png" alt="User Icon">
+                </div>
+                <div class="admin-name">
+                    <span>Administrador</span>
+                </div>
+            </div>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Caja</a></li>
-                <li><a href="#">Clientes</a></li>
-                <li><a href="#">Provedor</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Compras</a></li>
-
+                <li><a href="#">> Inicio</a></li>
+                <br>
+                <li><a href="#">> Caja</a></li>
+                <br>
+                <li><a href="#">> Clientes</a></li>
+                <br>
+                <li><a href="#">> Provedor</a></li>
+                <br>
+                <li><a href="#">> Productos</a></li>
+                <br>
+                <li><a href="#">>Compras</a></li>
             </ul>
-
-            <li><a href="#">Cerrar sesion</a></li>
-            
+           
         </div>
+        <a href="#" class="logout-link">Cerrar sesión</a>
         <div class="content">
             <h1>Salsamentaria la <br> mejor</h1>
+            <h3>3123456789</h3>
+            <h2>Nit 45346256652-1</h2>
         </div>
     </div>
 </body>
-</html
+</html>
