--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.css
@@ -1,15 +1,14 @@
 body {
     padding: 80;
-
     background-color: #ecf0f1;
 }
 header {
     background-color: #5499C7; /* Color de fondo azul */
-    padding: 50px;
+    padding: 40px;
     color: white; /* Color del texto en blanco */
     width: 100%;
     box-sizing: border-box;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 header img {
     width: 130px; /* Tamaño de la imagen */
@@ -38,4 +37,26 @@ h1 {
     letter-spacing: 2px; /* Espaciado entre letras */
     text-shadow: 4px 4px 8px rgba(0,0,0,0.8); /* Sombra del texto */
     transform: skew(-15deg); /* Inclina el texto en 15 grados */
+}
+.user-icon {
+    padding: 10px 40px 10px 10px; /* Ajusta el espaciado interno */
+    border-radius: 5px; /* Esquinas redondeadas */
+    border: 1px solid #ccc; /* Borde */
+    background-color: #f8f9fa; /* Color de fondo */
+    color: #666; /* Color del texto */
+    background-image: url('images/usuario-de-perfil.png'); /* Ruta del icono */
+    background-size: 20px; /* Tamaño del icono */
+    background-position: calc(100% - 5px) center; /* Ajusta la posición del icono */
+    background-repeat: no-repeat; /* Evita la repetición del icono */
+}
+.password-icon{
+    padding: 10px 40px 10px 10px; /* Ajusta el espaciado interno */
+    border-radius: 5px; /* Esquinas redondeadas */
+    border: 1px solid #ccc; /* Borde */
+    background-color: #f8f9fa; /* Color de fondo */
+    color: #666; /* Color del texto */
+    background-image: url('images/cerrar-con-llave.png'); /* Ruta del icono */
+    background-size: 20px; /* Tamaño del icono */
+    background-position: calc(100% - 5px) center; /* Ajusta la posición del icono */
+    background-repeat: no-repeat; /* Evita la repetición del icono */
 }
