--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/logo.png" alt="Logo"> <!-- Asegúrate de reemplazar "ruta_de_la_imagen" con la ruta de tu imagen -->
+        <img src="images/logo.png" alt="Logo"> <!-- Asegúrate de reemplazar "ruta_de_la_imagen" con la ruta de tu imagen -->
 
     </header>
     <main>
@@ -17,18 +17,17 @@
         <div id="login">
             <h2>Iniciar sesión</h2>
             <form action="" method="post"> <!-- Añade el atributo action con la URL de tu backend -->
-               <br>
-                <input type="text" class="input-field" placeholder="Usuario"><br>
-               <br>
-                <input type="password" class="input-field input-field-password" placeholder="Contraseña">
                 <br>
+                <input type="text" class="user-icon" placeholder=" Usuario">
                 <br>
-                <input type="submit" value="Iniciar sesión">
-                <br>
-                <br>
-                <a href="#" id="forgot-password">Olvidé mi contraseña</a>
-            </form>
-           
+                <input type="password" class="password-icon" placeholder=" Contraseña">
+                 <br>
+                 <br>
+                 <input type="submit" value="Iniciar sesión">
+                 <br>
+                 <br>
+                 <a href="#" id="forgot-password">Olvidé mi contraseña</a>
+             </form>
            
         </div>
 
