--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -57,7 +57,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
         <div class="modal-header">
-            <h2>Registro de venta</h2>
+            <h2>Registro de venta y eliminar </h2>
         </div>
         <div class="modal-body">
                 <div class="caja1">
@@ -121,6 +121,7 @@
         function closeModal() {
             document.getElementById("myModal").style.display = "none";
         }
+
     </script>
 </body>
 </html>
