--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -58,6 +58,7 @@
         <span class="close" onclick="closeModal()">×</span>
         <div class="modal-header">
             <h2>Registro de venta y eliminar </h2>
+            <h3>Registro de venta y eliminar </h3>
         </div>
         <div class="modal-body">
                 <div class="caja1">
