--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -57,8 +57,8 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
         <div class="modal-header">
-            <h2>Registro de venta y eliminar </h2>
-            <h3>ESTO ES UNA PRUEBA JFASDFJAOIFDJIAOSDFJIOA </h3>
+            <h2>Registro de venta</h2>
+           
         </div>
         <div class="modal-body">
                 <div class="caja1">
