se le coloca iconos al listado principal y se arregla todas las imagenes del logo

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="./general.css">
     <title>Página con Menú</title>
     <style>
@@ -27,21 +29,25 @@
                 </div>
             </div>
             <ul>
-                <li><a href="#">> Inicio</a></li>
+                <li><a href="principal.html"><i class="fas fa-home"></i> Inicio</a></li>
                 <br>
-                <li><a href="#">> Caja</a></li>
+                <li><a href="caja.html"><i class="fas fa-cash-register"></i> Caja</a></li>
                 <br>
-                <li><a href="#">> Clientes</a></li>
+                <li><a href="clientes.html"><i class="fas fa-users"></i> Clientes</a></li>
                 <br>
-                <li><a href="#">> Provedor</a></li>
+                <li><a href="#"><i class="fas fa-user-tie"></i> Proveedor</a></li>
                 <br>
-                <li><a href="#">> Productos</a></li>
+                <li><a href="#"><i class="fas fa-box"></i> Productos</a></li>
                 <br>
-                <li><a href="#">>Compras</a></li>
+                <li><a href="#"><i class="fas fa-shopping-cart"></i> Compras</a></li>
             </ul>
            
         </div>
-        <a href="#" class="logout-link">Cerrar sesión</a>
+        <a href="home.html" class="logout-link">
+            <i class="fas fa-sign-out-alt"></i> Cerrar sesión
+          </a>
+          
+          
         <div class="content">
             <!-- Contenido principal -->
             <h3>Clientes</h3>
