--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/general.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/general.css
@@ -5,10 +5,18 @@ body {
 }
 
 .sidebar-header .logo img {
-    width: 80%; /* Ajusta el tamaño del logo según sea necesario */
+    width: 120%; /* Ajusta el tamaño del logo según sea necesario */
     height: auto;
     padding: center;
+    margin-right: 40px;
 }
+.sidebar-header .logo {
+    display: flex;
+    align-items: center; /* Centra verticalmente */
+    justify-content: center; /* Centra horizontalmente */
+    padding-bottom:-8%; /* Ajusta el espacio inferior según sea necesario */
+}
+
 .sidebar-header .admin-name span {
     padding: 50px;
     font-weight: 500; /* Un poco más delgado que el texto normal */
@@ -19,12 +27,13 @@ body {
 .user-icon img {
     width: 60px; /* Ajusta el tamaño del icono */
     height: auto;
-    margin-top: 25px; /* Ajusta la distancia con el logo */
+    margin-top:3px; /* Ajusta la distancia con el logo */
     display: block; /* Centra el icono horizontalmente */
     margin-left:30%;
     margin-right: auto;
     padding: 10px;
 }
+
 
 .sidebar {
     flex: 0 0 180px; /* Ancho fijo de la barra lateral */
@@ -50,7 +59,7 @@ body {
     position: fixed;
     bottom: 0; /* Fija el enlace en la parte inferior de la ventana del navegador */
     left:  0; /* Fija el enlace en la esquina derecha de la ventana del navegador */
-    padding: 10px 15%; /* Ajusta el espaciado interno según sea necesario */
+    padding: 10px 12%; /* Ajusta el espaciado interno según sea necesario */
     color: #ffffff; /* Color de texto blanco */
     margin-bottom: 20px; /* Ajusta la distancia con los elementos anteriores */
 }
@@ -163,6 +172,8 @@ input[type="text"] {
 
 /* Estilos para la ventana modal */
 .modal, .modal2 {
+
+    display: none;
     padding-top: 5%;
     font-family: serif;
     position: absolute;
