--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.css
@@ -2,18 +2,36 @@ body {
     padding: 80;
     background-color: #ecf0f1;
 }
-header {
-    background-color: #5499C7; /* Color de fondo azul */
-    padding: 40px;
-    color: white; /* Color del texto en blanco */
-    width: 100%;
+.header {
+    background-color: #5499C7;
+    padding: 30px 0;
+    color: white;
     box-sizing: border-box;
-    margin-bottom: 10px;
-}
-header img {
-    width: 130px; /* Tamaño de la imagen */
+    margin-bottom: 10px; 
+    margin-top: 0px; 
+  }
+  
+  .header-content {
+    max-width: 1500px; 
+    margin: 0 auto; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo {
+    width: 200px; 
     height: auto;
-}
+  }
+  .header h1 {
+    font-size: 24px; 
+    color: white; 
+    text-align: center; 
+    margin: 0 auto; 
+    text-shadow: none;
+  }
+  
+  
 main {
     text-align: center;
 }
