--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/home.html
@@ -8,10 +8,13 @@
 
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="Logo"> <!-- Asegúrate de reemplazar "ruta_de_la_imagen" con la ruta de tu imagen -->
-
-    </header>
+    <header class="header">
+        <div class="header-content">
+          <img src="images/logo.png" alt="Logo" class="logo">
+          <h1 class="title">Salsamaentaria avicola,productos de panaderia</h1>
+        </div>
+      </header>
+      
     <main>
         <h1>Aplicativo <br>POS-HC</h1>
         <div id="login">
