--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.css
@@ -5,10 +5,18 @@ body {
 }
 
 .sidebar-header .logo img {
-    width: 80%; /* Ajusta el tamaño del logo según sea necesario */
+    width: 120%; /* Ajusta el tamaño del logo según sea necesario */
     height: auto;
     padding: center;
+    margin-right: 40px;
 }
+.sidebar-header .logo {
+    display: flex;
+    align-items: center; /* Centra verticalmente */
+    justify-content: center; /* Centra horizontalmente */
+    padding-bottom:-8%; /* Ajusta el espacio inferior según sea necesario */
+}
+
 .sidebar-header .admin-name span {
     padding: 50px;
     font-weight: 500; /* Un poco más delgado que el texto normal */
@@ -19,7 +27,7 @@ body {
 .user-icon img {
     width: 60px; /* Ajusta el tamaño del icono */
     height: auto;
-    margin-top: 25px; /* Ajusta la distancia con el logo */
+    margin-top:3px; /* Ajusta la distancia con el logo */
     display: block; /* Centra el icono horizontalmente */
     margin-left:30%;
     margin-right: auto;
@@ -31,8 +39,9 @@ body {
     background-color: #5499C7; /* Azul */
     color: #ffffff; /* Texto blanco */
     padding: 40px;
-    
+    margin-top: -5px; /* Ajusta este valor para subir la barra lateral */
 }
+
 
 .sidebar ul {
     list-style-type: none;
@@ -50,19 +59,19 @@ body {
     position: fixed;
     bottom: 0; /* Fija el enlace en la parte inferior de la ventana del navegador */
     left:  0; /* Fija el enlace en la esquina derecha de la ventana del navegador */
-    padding: 10px 15%; /* Ajusta el espaciado interno según sea necesario */
+    padding: 10px 12%; /* Ajusta el espaciado interno según sea necesario */
     color: #ffffff; /* Color de texto blanco */
     margin-bottom: 20px; /* Ajusta la distancia con los elementos anteriores */
 }
 
 .content {
     flex: 1; /* Ocupa todo el espacio restante */
-    padding: 20px;
-    margin-top: 15%;
+    padding:20px;
+    margin-top:-10%;
     background-color: rgba(255, 255, 255, 0.7); /* Fondo transparente */
-    padding: 10px; /* Ajusta el espaciado interno según sea necesario */
+    padding: 330px; /* Ajusta el espaciado interno según sea necesario */
     color:grey;
-
+     margin-left: 30px;
 }
 
 /* Imagen a la derecha como línea de agua */
@@ -70,9 +79,10 @@ body {
     display: flex;
     height: 100vh;
     background-image: url('images/logo.png'); /* Ruta de la imagen */
-    background-size: 700px; /* Define el tamaño de la imagen */
+    background-size: 800px; /* Define el tamaño de la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-position: calc(100% - 25%) calc(100% - 50%); /* Ajusta la posición de la imagen */
+    background-position: calc(100% - 40%) calc(100% - 50%); /* Ajusta la posición de la imagen */
+    
 }
 
 .content h3{
@@ -91,121 +101,3 @@ body {
 }
 
 
-.horizontal-bar {
-    background-color: #d8e4f0;
-    height: 25px;
-    width: 100%; /* Esto asegura que la barra abarque todo el ancho */
-    display: flex;
-    justify-content: flex-end;
-}   
-
-.horizontal-bar img {
-    width: 22px; /* Establece el ancho deseado */
-    height: 22px; /* Establece la altura deseada */
-    margin-right: 2%;
-}
-
-.horizontal-bar button {
-    width: 20%; 
-    height: auto; /* Altura automática para adaptarse al contenido */
-    min-width: 100px; /* Ancho mínimo para asegurar que el texto sea visible */
-    background-color: rgb(49, 48, 54); 
-    color: white; 
-    border: none;
-    border-radius: 5px;
-    cursor: pointer; /* Cambiar el cursor al pasar sobre el botón */
-    padding: 5px 10px; /* Ajuste del relleno */
-}
-
-.modal-header {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-}
-
-.form-group {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;    
-}
-
-.label {
-    margin-right: 80px;
-}
-
-/* Simplificación de los estilos para las cajas de texto */
-input[type="text"] {
-    display: block;
-    display: flex;
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;    
-    flex-direction: column;
-    height:30px;
-}
-
-.caja1{
-    padding: 2%;
-    padding-right: 8%;
-}
-
-.modal-body{
-    display: flex;
-    padding: 25px;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.modal {
-    padding-top: 5%;
-    font-family: serif;
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 0%;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
-}
-
-.modal-content {
-    background-color: #fdf6f6;
-    margin: 1% auto;
-    padding-bottom: 20px;
-    border: 1px solid #cfcbcb;
-    width: 60%;
-    max-width: 900px;
-}
-
-.close {
-    color: #fcf8f8;
-    float: right;
-    padding-right: 2%;
-    padding-top: 2%;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.btn-default {
-    width: 20%; /* Ancho de cada botón */
-    height: 40px; /* Altura del botón */
-    background-color: rgb(49, 48, 54); /* Fondo negro */
-    color: white; /* Texto blanco */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cambiar el cursor al pasar sobre el botón */
-    font-size: 16px; /* Tamaño de la fuente */
-    margin: 0 120px; 
-    justify-content: space-between 1%;
-}
