se agrega vinculos de proveedores

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -35,7 +35,7 @@
                 <br>
                 <li><a href="clientes.html"><i class="fas fa-users"></i> Clientes</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-user-tie"></i> Proveedor</a></li>
+                <li><a href="proveedores.html"><i class="fas fa-user-tie"></i> Proveedor</a></li>
                 <br>
                 <li><a href="#"><i class="fas fa-box"></i> Productos</a></li>
                 <br>
