Ajuste compras, ventas, eliminacion

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -35,11 +35,13 @@
                 <br>
                 <li><a href="clientes.html"><i class="fas fa-users"></i> Clientes</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-user-tie"></i> Proveedor</a></li>
+                <li><a href="proveedores.html"><i class="fas fa-user-tie"></i> Proveedor</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-box"></i> Productos</a></li>
+                <li><a href="productos.html"><i class="fas fa-box"></i> Productos</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-shopping-cart"></i> Compras</a></li>
+                <li><a href="compras.html"><i class="fas fa-shopping-cart"></i> Compras</a></li>
+                <br>
+                <li><a href="ventaHistorico.html"><i class="fas fa-box"></i> ventasHistorico</a></li>
             </ul>
            
         </div>
