--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <ul>
-                <li><a href="home.html"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="principal.html"><i class="fas fa-home"></i> Inicio</a></li>
                 <br>
                 <li><a href="caja.html"><i class="fas fa-cash-register"></i> Caja</a></li>
                 <br>
@@ -33,9 +33,11 @@
                 <br>
                 <li><a href="proveedores.html"><i class="fas fa-user-tie"></i> Proveedor</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-box"></i> Productos</a></li>
+                <li><a href="productos.html"><i class="fas fa-box"></i> Productos</a></li>
                 <br>
-                <li><a href="#"><i class="fas fa-shopping-cart"></i> Compras</a></li>
+                <li><a href="compras.html"><i class="fas fa-shopping-cart"></i> Compras</a></li>
+                <br>
+                <li><a href="ventaHistorico.html"><i class="fas fa-box"></i> ventasHistorico</a></li>
             </ul>
            
         </div>
