--- a/aplicativo_pos_hc/aplicativo_pos_hc/static/css/home.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/static/css/home.css
@@ -78,3 +78,30 @@ h1 {
     background-position: calc(100% - 5px) center; /* Ajusta la posición del icono */
     background-repeat: no-repeat; /* Evita la repetición del icono */
 }
+
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup p {
+  margin-bottom: 20px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
