--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./principal.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/principal.css') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <title>Página con Menú</title>
@@ -13,12 +13,12 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="images/logo.png" alt="Logo">
+                    <img src="../static/images/logo.png" alt="Logo">
                 </div>
                 <br>
                 
                 <div class="user-icon">
-                    <img src="images/usuario-de-perfil.png" alt="User Icon">
+                    <img src="/static/images/usuario-de-perfil.png" alt="User Icon">
                 </div>
                 <div class="admin-name">
                     <span>Administrador</span>
@@ -41,7 +41,7 @@
             </ul>
            
         </div>
-        <a href="home.html" class="logout-link">
+        <a href="/logout" class="logout-link">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
           </a>
           
